--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon-32x32.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     /* CSS Styles */
