--- a/index.html
+++ b/index.html
@@ -42,16 +42,8 @@
 </head>   
 <body>
   <div class="container">
-    <h1>Breaking News: Exciting Updates Underway – Unveiling a Revamped Website Soon!</h1>
-    <p></p>
-    <p></p>
-    <p>Site Update Alert: Our Developers are Implementing New Features – Prepare for an Amazing Upgrade!</p>
-    <p> Website Upgrade in Progress – Brace Yourself for a Refreshing Change!</p>
-    <p>Get Ready for an Enhanced Website: Developers are Currently Rolling Out Exciting Updates!</p>
-    <p></p>
-    <p>Stay Tuned for a Better User Experience: Developers Busy with Website Improvements!</p>
-    <p></p>
-    <p>Developers Running an Update for an Unforgettable Experience!</p>
+    <h1>Page Under Construction <br>Exciting Updates Coming Soon!</h1>
+    
     
   </div>
 </body>
