--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@ Sun:  Closed</p>
 <!-- Mirrored from sophiathepromoter.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 23 May 2023 22:36:52 GMT -->
 </html>
 
-script>
+<script>
    
 document.onkeydown = function (e) {
     if (event.keyCode == 123){
@@ -887,7 +887,7 @@ document.onkeydown = function (e) {
 
 
 
-script>
+<script>
   document.addEventListener("contextmenu", function (e){
     e.preventDefault();
     alert ("Right Click Disabled");
