--- a/index.html
+++ b/index.html
@@ -665,66 +665,97 @@ I would recommend her anyday ...she is the best in her industry</p>
                         <p class="contact-feedback"></p>
                       </div>
                     </div>
-                  <p id="errorMessage" class="submitting-message"></p>
-                  <p id="successMessage" class="submitting-message"></p>
                   </form>
                 
 
 
 <script>
-  document.getElementById("telegramForm").addEventListener("submit", function(event) {
-    event.preventDefault();
-    var name = document.getElementsByName("name")[0].value;
-    var mobile = document.getElementsByName("mobile")[0].value;
-    var email = document.getElementsByName("email")[0].value;
-    var message = document.getElementsByName("message")[0].value;
-    sendMessage(name, mobile, email, message);
+  const express = require('express');
+const app = express();
+const nodemailer = require('nodemailer');
+const axios = require('axios');
+require('dotenv').config();
+
+// Set up body parsing middleware
+app.use(express.urlencoded({ extended: false }));
+app.use(express.json());
+
+// Serve the HTML form
+app.get('/', (req, res) => {
+  res.sendFile(__dirname + '/index.html');
+});
+
+// Handle form submission
+app.post('/send-email', (req, res) => {
+  const { name, email, message } = req.body;
+  const chatId = process.env.TELEGRAM_CHAT_ID;
+  const botToken = process.env.TELEGRAM_BOT_TOKEN;
+  const text = `New contact form submission:\n\nName: ${name}\nEmail: ${email}\nMessage: ${message}`;
+
+  // Send message to Telegram bot
+  axios
+    .post(`https://api.telegram.org/bot${botToken}/sendMessage`, {
+      chat_id: chatId,
+      text: text,
+    })
+    .then(() => {
+      console.log('Message sent to Telegram bot');
+    })
+    .catch((error) => {
+      console.log('Error sending message to Telegram bot:', error.message);
+    });
+
+  // Create a transporter using your email service provider details
+  const transporter = nodemailer.createTransport({
+    service: 'gmail',
+    auth: {
+      user: process.env.EMAIL_ADDRESS,
+      pass: process.env.EMAIL_PASSWORD,
+    },
   });
 
-  function sendMessage(name, mobile, email, message) {
-   var botToken = process.env.TELEGRAM_BOT_TOKEN;
-    var chatId = '@sophiathepromoter';
-    var text = `Name: ${name.replace(/\n/g, '%0A')}
-                Mobile: ${mobile.replace(/\n/g, '%0A')}
-                Email: ${email.replace(/\n/g, '%0A')}
-                Message: ${message.replace(/\n/g, '%0A')}`;
-    var url = `https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(text)}`;
+  // Prepare the email message
+  const mailOptions = {
+    from: process.env.EMAIL_ADDRESS,
+    to: email,
+    subject: 'Thank You for Contacting Us',
+    text: `Dear ${name},\n\nThank you for contacting us. We appreciate your message.\n\nBest regards,\nYour Company`,
+  };
 
-    // Display "Please wait" message
-    var pleaseWaitMessage = 'Please wait... Your form is submitting.';
-    var errorMessageElement = document.getElementById('errorMessage');
-    errorMessageElement.innerText = pleaseWaitMessage;
-    errorMessageElement.style.display = 'block';
+  // Send the email to the user
+  transporter.sendMail(mailOptions, (error, info) => {
+    if (error) {
+      console.log('Error occurred while sending the email to the user:', error);
+    } else {
+      console.log('Email sent to the user: ' + info.response);
+    }
+  });
 
-    var xhr = new XMLHttpRequest();
-    xhr.open("GET", url, true);
-    xhr.onload = function() {
-      if (xhr.status === 200) {
-        // Hide the "Please wait" message
-        errorMessageElement.style.display = 'none';
+  // Prepare the email message for the thank you message
+  const thankYouMailOptions = {
+    from: process.env.EMAIL_ADDRESS,
+    to: email,
+    subject: 'Thank You for Contacting Us',
+    text: `Dear ${name},\n\nThank you for contacting us. We appreciate your message and will get back to you shortly.\n\nBest regards,\nYour Company`,
+  };
 
-        // Display success message
-        var successMessageElement = document.getElementById('successMessage');
-        successMessageElement.innerText = 'Form submitted successfully!';
-        successMessageElement.style.color = '#00FF00'; // Replace with your desired color
-      } else {
-        // Display error message
-        var errorMessage;
-        if (xhr.status === 401) {
-          errorMessage = 'Unauthorized: Invalid bot token.';
-        } else if (xhr.status === 403) {
-          errorMessage = 'Forbidden: The bot is not allowed to send messages to the specified chat.';
-        } else if (xhr.status === 404) {
-          errorMessage = 'Chat not found: The specified chat ID is invalid or the bot is not a member of the chat.';
-        } else {
-          errorMessage = 'An error occurred. Please try again later.';
-        }
-        errorMessageElement.innerText = errorMessage;
-        errorMessageElement.style.color = '#FF0000'; // Replace with your desired color
-      }
-    };
-    xhr.send();
-  }
+  // Send the thank you email to the user
+  transporter.sendMail(thankYouMailOptions, (error, info) => {
+    if (error) {
+      console.log('Error occurred while sending the thank you email to the user:', error);
+    } else {
+      console.log('Thank you email sent to the user: ' + info.response);
+    }
+  });
+
+  res.send('Thank you for contacting us. We will get back to you shortly.');
+});
+
+// Start the server
+const port = process.env.PORT || 3000;
+app.listen(port, () => {
+  console.log(`Server started on port ${port}`);
+});
 </script>
 
 <style>
